tmp/json/Json.g4
grammar Json;

json: object
  | array
  ;


object: '{' pair (',' pair)* '}'  # AnObj
  | '{' '}'                       # EmptyObj
  ;

pair: STRING ':' value;

array: '[' value (',' value)* ']' # AnArray
  | '[' ']'                       # EmptyArray
  ;

value: STRING   # String
  | NUMBER      # Atom
  | object      # Obj
  | array       # Arr
  | 'true'      # Atom
  | 'false'     # Atom
  | 'null'      # Atom
  ;

STRING: '"' (ESC | ~["\\])* '"';
fragment ESC: '\\' (["\\/bfnrt] | UNICODE);
fragment UNICODE: 'u' HEX HEX HEX HEX;
fragment HEX: [0-9a-fA-F];

NUMBER: '-'? INT '.' INT EXP?
  | '-'? INT EXP
  | '-'? INT
  ;

fragment INT: '0' | [1-9] [0-9]*;
fragment EXP: [Ee] [+\-]? INT;
